# optimax

./: Cargo.toml  README.md
src/: bfgs.rs  gradient_descent.rs  lib.rs  main.rs  stochastic_annealing.rs
