[package]
author = ["Pietro Zanotta", "<pcs.parmigiano@gmail.com>"]
description = "Various algorithms for optimization"
repository = "https://github.com/ScipioneParmigiano/rustonomicon_optima"
readme = "README.md"
name = "rustonomicon_optima"
version = "0.1.2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finitediff = "0.1.4"
nalgebra = "0.32.3"
ndarray = "0.15.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
