[package]
author = ["Pietro Zanotta", "<pcs.parmigiano@gmail.com>"]
description = "Various algorithms for optimization"
repository = "https://github.com/ScipioneParmigiano/optima"
readme = "README.md"
name = "optimax"
version = "0.1.3"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finitediff = "0.1.4"
nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
